# agv_gui

./: .gitignore  cuda-keyring_1.1-1_all.deb
amr_v4_msgs_srvs/: CMakeLists.txt
amr_v4_msgs_srvs/msg/: Error.msg  Pin.msg
amr_v4_msgs_srvs/srv/: Testserv.srv
amr_v4_qt/: CMakeLists.txt  README.md  package.xml
amr_v4_qt/include/: active_node.h  amr_node.h  battery.h  battery_node.h  estop_publisher.h  fisher_screen.h  health.h  health_node.h  hello.h  main_gui.h  motor_node.h  robot_node.h  running_mode.h  running_node.h  scrolling_label.h  styles.qss  ui_battery_screen.h  ui_health_screen.h  ui_hello_world_screen.h  ui_home_screen.h  ui_main_screen.h  ui_motor_screen.h  ui_running_mode_screen.h
amr_v4_qt/install/: local_setup.sh  setup.ps1  setup.sh
amr_v4_qt/log/: latest_build
amr_v4_qt/src/: active_node.cpp  amr_node.cpp  battery.cpp  battery_node.cpp  battery_screen.ui  estopPublisher.cpp  fisher_screen.cpp  health_node.cpp  health_screen.ui  hello.cpp  hello_world.cpp  hello_world_screen.ui  home_screen.ui  main.cpp  main_gui.cpp  main_screen.ui  motor_node.cpp  motor_screen.ui  motors.cpp  robot_node.cpp  running_mode_screen.ui  running_node.cpp  scrolling_label.cpp
amr_v4_qt/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
amr_v4_qt/src/log/: latest_build
install/: local_setup.sh  setup.sh
install/agv_gui/lib/agv_gui/: agv_gui
install/agv_gui/share/agv_gui/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/amr_v4_msgs_srvs/include/amr_v4_msgs_srvs/amr_v4_msgs_srvs/msg/: motor.h  motor.hpp  pin.h  pin.hpp  robot.h  robot.hpp
install/amr_v4_msgs_srvs/include/amr_v4_msgs_srvs/amr_v4_msgs_srvs/msg/detail/: motor__builder.hpp  motor__description.c  motor__functions.c  motor__rosidl_typesupport_fastrtps_c.h  motor__rosidl_typesupport_fastrtps_cpp.hpp  motor__rosidl_typesupport_introspection_c.h  motor__rosidl_typesupport_introspection_cpp.hpp  motor__struct.h  motor__struct.hpp  motor__traits.hpp  motor__type_support.c  motor__type_support.cpp  pin__builder.hpp  pin__functions.c  pin__functions.h  pin__rosidl_typesupport_fastrtps_c.h  pin__rosidl_typesupport_fastrtps_cpp.hpp  pin__rosidl_typesupport_introspection_cpp.hpp  pin__struct.h  pin__struct.hpp  pin__traits.hpp  pin__type_support.c  pin__type_support.cpp  robot__builder.hpp  robot__description.c  robot__functions.c  robot__functions.h  robot__rosidl_typesupport_fastrtps_c.h  robot__rosidl_typesupport_fastrtps_cpp.hpp  robot__rosidl_typesupport_introspection_c.h  robot__struct.h  robot__struct.hpp  robot__traits.hpp  robot__type_support.c  robot__type_support.cpp
install/amr_v4_msgs_srvs/include/amr_v4_msgs_srvs/amr_v4_msgs_srvs/srv/detail/: testserv__builder.hpp  testserv__functions.c  testserv__functions.h  testserv__rosidl_typesupport_fastrtps_c.h  testserv__rosidl_typesupport_fastrtps_cpp.hpp  testserv__rosidl_typesupport_introspection_c.h  testserv__rosidl_typesupport_introspection_cpp.hpp  testserv__struct.h  testserv__struct.hpp  testserv__traits.hpp  testserv__type_support.c  testserv__type_support.cpp  testserv__type_support.h
install/amr_v4_msgs_srvs/include/amr_v4_msgs_srvs/msg/detail/: motor__type_support.h  pin__rosidl_typesupport_fastrtps_c.h  pin__rosidl_typesupport_introspection_c.h  pin__struct.h  pin__type_support.c  pin__type_support.h  robot__rosidl_typesupport_fastrtps_c.h  robot__struct.hpp
install/amr_v4_msgs_srvs/include/amr_v4_msgs_srvs/srv/: testserv.hpp
install/amr_v4_msgs_srvs/include/amr_v4_msgs_srvs/srv/detail/: testserv__rosidl_typesupport_fastrtps_cpp.hpp  testserv__rosidl_typesupport_introspection_cpp.hpp  testserv__type_support.c  testserv__type_support.cpp  testserv__type_support.h
install/amr_v4_msgs_srvs/share/ament_index/resource_index/parent_prefix_path/: amr_v4_msgs_srvs
install/amr_v4_msgs_srvs/share/ament_index/resource_index/rosidl_interfaces/: amr_v4_msgs_srvs
install/amr_v4_msgs_srvs/share/amr_v4_msgs_srvs/: package.dsv  package.ps1  package.sh
install/amr_v4_msgs_srvs/share/amr_v4_msgs_srvs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  amr_v4_msgs_srvsConfig.cmake  amr_v4_msgs_srvs__rosidl_typesupport_cExport.cmake  amr_v4_msgs_srvs__rosidl_typesupport_cppExport.cmake  amr_v4_msgs_srvs__rosidl_typesupport_introspection_cExport.cmake  export_amr_v4_msgs_srvs__rosidl_generator_cExport.cmake  export_amr_v4_msgs_srvs__rosidl_generator_cppExport.cmake  export_amr_v4_msgs_srvs__rosidl_generator_pyExport-noconfig.cmake  export_amr_v4_msgs_srvs__rosidl_typesupport_fastrtps_cExport.cmake  export_amr_v4_msgs_srvs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_amr_v4_msgs_srvs__rosidl_typesupport_fastrtps_cppExport.cmake
install/amr_v4_msgs_srvs/share/amr_v4_msgs_srvs/msg/: Motor.msg  Pin.idl  Pin.json  Pin.msg  Robot.idl  Robot.msg
install/amr_v4_qt/share/ament_index/resource_index/package_run_dependencies/: amr_v4_qt
install/amr_v4_qt/share/ament_index/resource_index/parent_prefix_path/: amr_v4_qt
install/amr_v4_qt/share/amr_v4_qt/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/amr_v4_qt/share/amr_v4_qt/launch/: gui.launch.py
log/: latest_build
src/agv_gui/: CMakeLists.txt  package.xml
src/agv_gui/include/: battery_node.hpp  battery_node_1.hpp  battery_node_2.hpp  battery_node_3.hpp  battery_node_4.hpp  charge_node.hpp  healhPopUp.hpp  healthPopUp.hpp
src/agv_gui/launch/: gui.launch.py
src/agv_gui/src/: battery_node.cpp  battery_node_1.cpp  battery_node_2.cpp  battery_node_3.cpp  battery_node_4.cpp  charge_node.cpp  healthPopUp.cpp  main_gui.cpp
src/amr_v4_qt/include/: amr_node.h  main_gui.h  ui_main_screen.h
src/amr_v4_qt/install/: setup.bash  setup.zsh
src/amr_v4_qt/install/amr_v4_qt/share/amr_v4_qt/: package.bash  package.zsh
src/amr_v4_qt/log/: latest_build
src/amr_v4_qt/src/: amr_node.cpp  health.cpp  main.cpp  running_mode.cpp  running_mode_screen.ui
(+6 files in other folders)
